add new psevdoclas

--- a/index.html
+++ b/index.html
@@ -40,36 +40,30 @@
         </nav>
     </div>
 </header>
-<section class="section_1">
-    <div class="box_1">
-        <p class="subtitle_1">
+<section class="studios">
+    <article>
+        <h2>
             Photographer & Filmmaker
-        </p>
+        </h2>
         <h1>Aperture Studios</h1>
-        <p class="subtitle_2">
+        <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
         </p>
-        <div class="sec_navig">
-            <ul>
+    </article>
+            <ul class="icon_list">
                 <li>
-                    <img src="images/clock.svg" alt="pic">
                     <p>1/2000s</p>
                 </li>
                 <li>
-                    <img src="images/round.svg" alt="pic">
                     <p>f/11</p>
                 </li>
                 <li>
-                    <img src="images/ISO.svg" alt="pic">
                     <p>100</p>
                 </li>
                 <li>
-                    <img src="images/location.svg" alt="pic">
                     <p>Iceland</p>
                 </li>
             </ul>
-        </div>
-    </div>
 </section>
 </body>
 </body>
