--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
@@ -40,7 +42,7 @@
         </nav>
     </div>
 </header>
-<section class="studios">
+<section class="studios-sect">
     <article>
         <h2>
             Photographer & Filmmaker
@@ -51,20 +53,28 @@
         </p>
     </article>
             <ul class="icon_list">
-                <li>
-                    <p>1/2000s</p>
-                </li>
-                <li>
-                    <p>f/11</p>
-                </li>
-                <li>
-                    <p>100</p>
-                </li>
-                <li>
-                    <p>Iceland</p>
-                </li>
+                <li>1/2000s</li>
+                <li>f/11</li>
+                <li>100</li>
+                <li>Iceland</li>
             </ul>
 </section>
+<section class="past-clients">
+    <div class="wrapper_past">
+        <h2>Past clients</h2>
+        <h3>Trusted by your favourite companies</h3>
+        <div class="clients_logo owl-carousel">
+    <a href="#"><img src="images/hill.svg" alt="picture"></a>
+        <a href="#"><img src="images/ricks.svg" alt="picture"></a>
+        <a href="#"><img src="images/studiou.svg" alt="picture"></a>
+        <a href="#"><img src="images/chill.svg" alt="picture"></a>
+        <a href="#"><img src="images/stockholm.svg" alt="picture"></a>
+        </div>
+        </div>
+</section>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
+<script src="js/script.js"></script>
 </body>
 </body>
 </html>
