add mobile menu

--- a/index.html
+++ b/index.html
@@ -13,35 +13,76 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.default.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile_menu.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-<header>
+
+<header class="cd-header">
     <div class="wrapper_ha">
-        <a href="#">
+        <a href="#0" class="cd-logo">
             <img src="images/logo.svg" alt="logo">
         </a>
-        <nav>
-            <ul>
-                <li>
+        <nav class="cd-3d-nav-container">
+            <ul class="cd-3d-nav">
+                <li class="cd-selected">
                     <a href="#">Business areas</a>
                 </li>
+
                 <li>
-                    <a href="#">Featured images</a>
+                    <a href="#0">Featured images</a>
                 </li>
+
                 <li>
-                    <a href="#">Gear cage</a>
+                    <a href="#0">Gear cage</a>
                 </li>
+
                 <li>
                     <a href="#">Contact</a>
                 </li>
+
                 <li>
                     <a href="#">Get template</a>
                 </li>
-            </ul>
+            </ul> <!-- .cd-3d-nav -->
+
+            <span class="cd-marker color-1"></span>
         </nav>
+        <a href="#0" class="cd-3d-nav-trigger">
+            Menu
+            <span></span>
+        </a>
     </div>
-</header>
+</header> <!-- .cd-header -->
+ <!-- .cd-3d-nav-container -->
+
+
+<!--<header>-->
+<!--    <div class="wrapper_ha">-->
+<!--        <a href="#">-->
+<!--            <img src="images/logo.svg" alt="logo">-->
+<!--        </a>-->
+<!--        <nav>-->
+<!--            <ul>-->
+<!--                <li>-->
+<!--                    <a href="#">Business areas</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Featured images</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Gear cage</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Contact</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Get template</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </nav>-->
+<!--    </div>-->
+<!--</header>-->
 <section class="studios-sect">
     <article>
         <h2>
@@ -49,30 +90,34 @@
         </h2>
         <h1>Aperture Studios</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+            tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+            erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique
+            posuere.
         </p>
     </article>
-            <ul class="icon_list">
-                <li>1/2000s</li>
-                <li>f/11</li>
-                <li>100</li>
-                <li>Iceland</li>
-            </ul>
+    <ul class="icon_list">
+        <li>1/2000s</li>
+        <li>f/11</li>
+        <li>100</li>
+        <li>Iceland</li>
+    </ul>
 </section>
 <section class="past-clients">
     <div class="wrapper_past">
         <h2>Past clients</h2>
         <h3>Trusted by your favourite companies</h3>
         <div class="clients_logo owl-carousel">
-    <a href="#"><img src="images/hill.svg" alt="picture"></a>
-        <a href="#"><img src="images/ricks.svg" alt="picture"></a>
-        <a href="#"><img src="images/studiou.svg" alt="picture"></a>
-        <a href="#"><img src="images/chill.svg" alt="picture"></a>
-        <a href="#"><img src="images/stockholm.svg" alt="picture"></a>
+            <a href="#"><img src="images/hill.svg" alt="picture"></a>
+            <a href="#"><img src="images/ricks.svg" alt="picture"></a>
+            <a href="#"><img src="images/studiou.svg" alt="picture"></a>
+            <a href="#"><img src="images/chill.svg" alt="picture"></a>
+            <a href="#"><img src="images/stockholm.svg" alt="picture"></a>
         </div>
-        </div>
+    </div>
 </section>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/script.js"></script>
 </body>
